# take-cover

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  README.md  index.html  rustfmt.toml
.cargo/: Config.toml
.github/workflows/: gh-pages.yml  release.yml  version.yml
_app/: version.json
_app/immutable/assets/: 0.CSQbaq5N.css  0.DhPgPzBt.css  _layout.CDeKN89d.css  _layout.DIc0dSiH.css  _layout.DVxYeBAb.css
_app/immutable/chunks/: disclose-version.BDO1LOx9.js  disclose-version.C3uzr6O3.js  disclose-version.C9LACW3v.js  disclose-version.Y3a8vduN.js  disclose-version.h7BwwYBF.js  entry.4idiem2I.js  entry.83hUqhm3.js  entry.9uw7-AWf.js  entry.B-29JSys.js  entry.BM2aUUGg.js  entry.BRBhSZFC.js  entry.BYZpNWFS.js  entry.BbPmGRID.js  entry.BvSRG5hm.js  entry.Bw1dibhn.js  entry.BwjDNnKE.js  entry.C8QUOAHI.js  entry.C8wpEGU9.js  entry.Cr6v9BXh.js  entry.Cy-GgtKu.js  entry.D43SxoIo.js  entry.D9HrB4qC.js  entry.DPPnWoef.js  entry.DWoC1u0e.js  entry.DYRDXNb_.js  entry.DbQOa9Wq.js  entry.DpBYaJxF.js  entry.It8KZzzP.js  entry.ecC28guA.js  entry.oQXqkgLg.js  if.B8_c6F91.js  if.D-0Vuzfo.js  render.8TsnWuwJ.js  render.BKVUzmiK.js  render.Bju3pLRD.js  render.DjGuSKYt.js  (+15 more)
assets/levels/: planet.ldtk  walls.ldtk
src/: app_state.rs  assets.rs  constants.rs  dev_tools.rs  enemy.rs  lib.rs  main.rs  prelude.rs  theme.rs  utils.rs
src/game/: cycle.rs  mod.rs
src/player/: plugin.rs
src/screens/: game.rs  loading.rs  main_menu.rs  mod.rs
www/: package.json  pnpm-lock.yaml  postcss.config.mjs  svelte.config.js  tailwind.config.ts  vite.config.ts
www/src/: app.css
(+161 files in other folders)
