[package]
name = "take-cover"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["wayland"] }
bevy_rapier2d = "0.27.0"
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }

[dev-dependencies]
rusty-hook = "0.11.2"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]
