[package]
name = "take-cover"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["wayland", "wav"] }
bevy-inspector-egui = "0.25.1"
bevy_ecs_ldtk = { version = "0.10.0", features = ["atlas"] }
bevy_ecs_tilemap = "0.14.0"
bevy_rapier2d = "0.27.0"
enum-iterator = "2.1.0"
iyes_progress = { version = "0.12.0", features = ["assets"] }
log = { version = "*", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
rand = "0.8.5"
seldom_state = "0.11.0"

[dev-dependencies]
rusty-hook = "0.11.2"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[features]
default = ["dev_native"]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]
dev_native = ["dev", "bevy/file_watcher", "bevy/embedded_watcher"]
